--- a/API.ipynb
+++ b/API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7eMYCyiyp+TLej8xUYCN+",
+      "authorship_tag": "ABX9TyM2dYsvM07u4XGOkSNN+Vg6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -675,15 +675,45 @@
         "run_with_ngrok(app) \n",
         "@app.route('/post_message', methods=['POST'])\n",
         "def post_message():\n",
-        "    if 'message' in request.form:\n",
-        "        message = request.form['message']\n",
-        "        fileName = request.files\n",
-        "        print(fileName)\n",
-        "        # Do something with the message, e.g., save to a database\n",
-        "        print(message)\n",
-        "        return jsonify({'success': True, 'message': 'Message received successfully.'})\n",
-        "    else:\n",
-        "        return jsonify({'success': False, 'error': 'No message provided.'}), 400\n",
+        "    # Save the uploaded image\n",
+        "    upload_folder = 'GFPGAN/inputs/upload'\n",
+        "    if os.path.isdir(upload_folder):\n",
+        "        shutil.rmtree(upload_folder)\n",
+        "    os.mkdir(upload_folder)\n",
+        "\n",
+        "    image_file = request.files['image']\n",
+        "    image_path = os.path.join(upload_folder, image_file.filename)\n",
+        "    image_file.save(image_path)\n",
+        "\n",
+        "    # Define the command for image processing\n",
+        "    command = [\n",
+        "        \"python\",\n",
+        "        \"GFPGAN/inference_gfpgan.py\",\n",
+        "        \"-i\", \"GFPGAN/inputs/upload\",\n",
+        "        \"-o\", \"GFPGAN/results\",\n",
+        "        \"-v\", \"1.3\",\n",
+        "        \"-s\", \"2\",\n",
+        "        \"--bg_upsampler\", \"realesrgan\"\n",
+        "    ]\n",
+        "\n",
+        "    # Execute the command\n",
+        "    process = subprocess.Popen(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+        "    output, error = process.communicate()\n",
+        "\n",
+        "    if process.returncode != 0:\n",
+        "        return jsonify({'error': error.decode('utf-8')})\n",
+        "\n",
+        "    # Prepare and return the processed image\n",
+        "    result_folder = 'GFPGAN/results/restored_faces'\n",
+        "    output_list = sorted(glob.glob(os.path.join(result_folder, '*')))\n",
+        "    output_images = []\n",
+        "    for output_path in output_list:\n",
+        "        output_image = imread(output_path)\n",
+        "        output_images.append(output_image)\n",
+        "\n",
+        "    return jsonify({'images': \"Image processed succesfully\"})\n",
+        "\n",
+        "    \n",
         "\n",
         "if __name__ == '__main__':\n",
         "    app.run()\n"
@@ -693,9 +723,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5acc36af-acb9-4c26-f36c-4e81295c1c72"
+        "outputId": "10358131-bd05-4f97-c12f-bb12b822503c"
       },
-      "execution_count": 45,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,7 +748,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://8566-34-90-53-18.ngrok-free.app\n",
+            " * Running on http://5c8f-34-90-53-18.ngrok-free.app\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         },
@@ -726,15 +756,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "INFO:werkzeug:127.0.0.1 - - [28/May/2023 17:10:25] \"POST /post_message HTTP/1.1\" 200 -\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ImmutableMultiDict([('fileName', <FileStorage: 'theladyeve-stanwyck-blurry.png' ('image/png')>)])\n",
-            "this is the message\n"
+            "INFO:werkzeug:127.0.0.1 - - [28/May/2023 17:24:28] \"POST /post_message HTTP/1.1\" 200 -\n"
           ]
         }
       ]
